<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="请选择要推荐的类型"
        android:textSize="16sp"
        android:padding="3dp"
        android:textColor="@android:color/black"
        />

    <RadioGroup
        android:id="@+id/rg_check"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:background="@drawable/list_item_bg_normal"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textfragment_title"
            android:checked="true"
            android:padding="5dp"/>
        <RadioButton
            android:id="@+id/rb_picture"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picfragment_title"/>
        <RadioButton
            android:id="@+id/rb_video"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videofragment_title"/>
    </RadioGroup>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="请输入作品名称(必填)"
        android:textSize="18sp"
        android:padding="3dp"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/et_recommend_title"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:hint="名称作者等"
        android:textSize="16sp"
        android:padding="3dp"
        android:gravity="top|left"
        android:background="@drawable/list_item_bg_normal"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="推荐理由(选填)"
        android:textSize="16sp"
        android:padding="3dp"
        android:textColor="@android:color/black"
        />
    <EditText
        android:id="@+id/et_recommend_reason"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:hint="如能写上您的推荐语就更好啦! 若手机使用不便可直接发送邮件至aJing_Luo@163.com"
        android:textSize="16sp"
        android:gravity="top|left"
        android:background="@drawable/list_item_bg_normal"
        android:layout_height="150dp"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="您的称呼、昵称(选填)"
            android:textSize="16sp"
            android:padding="3dp"
            android:textColor="@android:color/black"
            />
        <EditText
            android:id="@+id/et_recommend_referrer"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:gravity="top|left"
            android:singleLine="true"
            android:background="@drawable/list_item_bg_normal"
            android:layout_height="wrap_content"/>

        <Button
        android:id="@+id/btn_recommend_submit"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:text="提交"
        android:padding="10dp"
        android:textSize="25sp"
        android:textColor="@color/btn_submit_selector"
        android:background="@drawable/btn_submit_selector"
        android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>